# UMA-Fold

./: .gitignore  MAKEFILE  Makefile  ORDER_OF_OPERATIONS.md  README.md  download_trainingdata.txt  pyproject.toml  requirements.txt  setup.py  test_input.py  test_instantiate.py  test_matmul_shapes.py  test_quick.py
configs/: config.yaml
configs/data/: default.yaml
configs/model/: pairmixer.yaml
configs/trainer/: default.yaml
logs/SLURM_out/: download_32255114.out
notebooks/: exploration.ipynb
scripts/: inference.py  pilot_run.py  preflight.py  train.py  visualize_pymol.py
scripts/SLURM/: 01_download_data.sh  02_pilot_run.sh  03_resume_stage2.sh  03_train_model.sh  03_train_multi_gpu.sh  04_inference.sh  04_resume_stage2_multi_gpu.sh  05_bf16_diagnostic.sh  check_ddp.sh  test_matmul.sh
src/: __init__.py
src/data/: __init__.py  constants.py  datamodule.py
src/models/: __init__.py  layers.py  pairmixer_block.py  uma_fold.py
src/models/modules/: encoders.py
src/training/: __init__.py  lightning_module.py
src/utils/: __init__.py  precision.py
tests/: test_datamodule.py  test_pairmixer_block.py
