[project]
name = "uma-fold"
version = "0.1.0"
description = "UMA-Fold: Ultra-lightweight attention-free biomolecular structure predictor"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    # boltz from PyPI — no local git clone required.
    # Provides: AtomDiffusion, InputEmbedder, MSAModule, BoltzTrainingDataModule.
    # Replacement roadmap: see DEBOLTZ.md for phased migration plan.
    "boltz==2.2.1",
    "pytorch-lightning>=2.2.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "einops>=0.7.0",
    "biopython>=1.83",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ── uv source overrides ──────────────────────────────────────────────────────
# torch: pull cu124 wheel from the PyTorch index (avoids CUDA version conflicts
#        that occur when pip resolves torch and cuequivariance separately)
# boltz: editable install from the locally-cloned repo
[tool.uv.sources]
torch       = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url  = "https://download.pytorch.org/whl/cu124"
explicit = true
